<resources>
    <!-- App name -->
    <string name="app_name" translatable="false">Mercury</string>

    <!-- General Purpose -->
    <string name="generalChoose">Choose</string>
    <string name="generalOK">OK</string>
    <string name="generalCancel">Cancel</string>
    <string name="generalNext">Next</string>
    <string name="generalUsername">Username</string>
    <string name="generalEmail">Email</string>
    <string name="generalPassword">Password</string>
    <string name="generalStatus">Status</string>
    <string name="generalJob">Job</string>
    <string name="generalLocation">Location</string>
    <string name="generalWebsite">Website</string>
    <string name="generalSave">Save</string>
    <string name="generalAdd">Add</string>
    <string name="generalFriends">Friends</string>
    <string name="generalConfirm">Confirm</string>
    <string name="generalPhoto">Photo</string>
    <string name="generalCreate">Create</string>
    <string name="generalClear">Clear</string>
    <string name="generalJoined">Joined:</string>
    <string name="generalDelete">Delete</string>
    <string name="generalSend">Send</string>
    <string name="generalUpdate">Successfully updated</string>
    <string name="generalName">Name</string>
    <string name="generalEdit">Edit</string>

    <!-- Welcome (Activity) -->
    <string name="welcomeTitle">Welcome to Mercury</string>
    <string name="welcomeBody">An app that emphasizes on simplicity, anonymity and of course better communication between your friends.</string>
    <string name="welcomeHaveAccount">Have an account already?</string>
    <string name="welcomeHaveAccountP2">Log in</string>

    <!-- SignIn (Activity) -->
    <string name="signInBody">To log in please type your email and your password</string>
    <string name="signInCredential">Email</string>
    <string name="signInPassword">Password</string>
    <string name="signInSignIn">Sign In</string>
    <string name="signInForgot">We have sent you an email about your request</string>
    <string name="signInResend">Please activate your account or press "send" to send a new verification email</string>
    <string name="signInResendSuccess">New verification email has been sent</string>
    <string name="signInDialogTitle">Logging you in………</string>
    <string name="signInDialogMessage">Please wait while we logging you in</string>

    <!-- SignUp (Activity) -->
    <string name="signUpGoBack">Go Back</string>
    <string name="signUpCreateAcc">Create account</string>
    <string name="signUpCreate">Create</string>
    <string name="signUpEmailVerification">We have sent you the verification link to activate your account to the email you have entered during registration</string>
    <string name="signUpDialogTitle">Warning</string>
    <string name="signUpDialogMessage">Please wait while we create your user</string>

    <!-- Main (Options)-->
    <string name="mainOptionsHome">Chats</string>
    <string name="mainOptionsPeople">Friends</string>

    <!-- Search (Sheet) -->
    <string name="searchBox">Search…</string>
    <string name="searchClear">Clear</string>
    <string name="searchCachedTitle">Recent</string>
    <string name="searchError">Nothing to show here</string>
    <string name="dialogDeleteAllCachedTitle">Clear all recent searches?</string>
    <string name="dialogDeleteAllCachedMessage">This can\'t be undone and you will remove all your recent searches.</string>
    <string name="dialogDeleteCachedPart1">Remove</string>
    <string name="dialogDeleteCachedPart2">from your history?</string>

    <!-- People (Fragment) -->
    <string name="peopleTabFriends">Friends</string>
    <string name="peopleTabPending">Requests</string>

    <!-- ProfileEdit (Activity) -->
    <string name="profileEditHelper">Edit Profile</string>
    <string name="profileEditDialogTitle1">Warning!</string>
    <string name="profileEditDialogMessage1">No changes found!</string>
    <string name="profileEditDialogTitle2">Confirm choices!</string>
    <string name="profileEditDialogMessage2">Do you want to apply this changes?</string>

    <!-- Settings (Activity) -->
    <string name="settingsTitle">Settings</string>
    <string name="settingsAccountTitle">Account</string>
    <string name="settingsPreferencesTitle">Preferences</string>
    <string name="settingsDocumentsTitle">Documents</string>
    <string name="settingsAccountSignOut">Sign out</string>
    <string name="settingsAccountChangeEmail">Change email</string>
    <string name="settingsAccountChangePassword">Change password</string>
    <string name="settingsAccountEditProfile">Edit profile</string>
    <string name="settingsPrivacyTitle">Privacy &amp; Safety</string>
    <string name="settingsPrivacyPublicProfile">Public Profile</string>
    <string name="settingsPrivacyShowImages">Preview images</string>
    <string name="settingsPrivacyShowBlocked">Blocked users</string>
    <string name="settingsPreferencesChangeAccent">Change accent color</string>
    <string name="settingsDocumentsFAQ">FAQ</string>
    <string name="settingsDocumentsPrivacy">Privacy policy</string>
    <string name="settingsDocumentsTerms">Terms &amp; Conditions</string>
    <string name="settingsDangerCloseAccount">Close account</string>
    <string name="settingsDialogTitle">Danger, This action cannot be undone!</string>
    <string name="settingsDialogMessagePart1">If you proceed with the account deletion, you will not be able to use</string>
    <string name="settingsDialogMessagePart2">again</string>

    <!-- ChangeInformation (Activity) -->
    <string name="changeVerifyTitle">Verify your password</string>
    <string name="changeVerifySubTitle">Re-enter your password to continue</string>

    <!-- change email (Activity) -->
    <string name="changeEmailTitle">Change email</string>
    <string name="changeEmailSubTitle">Your current email is: </string>

    <!-- Change Password (Activity) -->
    <string name="changePasswordTitle">Change password</string>
    <string name="changePasswordSubTitle">Type bellow the new password of your choice</string>
    <string name="changePasswordForgot">Forgot password?</string>

    <!-- Delete Account (Activity) -->
    <string name="deleteAccountTitle">Are you sure you want to continue?</string>
    <string name="deleteAccountParagraph">By confirming this action, we delete all the data we have about you.</string>

    <!-- Requests -->
    <string name="requestAccepted">Friends</string>
    <string name="requestBlocked">Blocked</string>
    <string name="requestWaiting">Pending</string>
    <string name="requestNone">Add</string>
    <string name="requestAnswer">Accept</string>

    <!-- AdapterRoom -->
    <string name="adapterRoomYou">You</string>
    <string name="adapterRoomOther">Other</string>

    <!-- ChatRoom (Activity) -->
    <string name="chatRoomMessageHint">Aa</string>

    <!-- ChatRoomSettings (Activity) -->
    <string name="chatRoomSettingsMembers">Members</string>
    <string name="chatRoomSettingsCreated">Created</string>
    <string name="chatRoomSettingsUpdate">Update</string>
    <string name="chatRoomSettingsChangeName">Change name</string>
    <string name="chatRoomSettingsDanger">Danger</string>
    <string name="chatRoomSettingsChangeOwner">Change owner</string>
    <string name="chatRoomSettingsDeleteRoom">Delete room</string>
    <string name="chatRoomSettingsLeaveRoom">Leave room</string>
    <string name="chatRoomSettingsRoomType">Type</string>
    <string name="chatRoomSettingsRoomPrivate">Private</string>
    <string name="chatRoomSettingsRoomGroup">Group</string>
    <string name="chatRoomSettingsDialogTitle">Danger!!</string>
    <string name="chatRoomSettingsDialogMsg1">You cannot leave your own room. Either change the owner or delete the room.</string>
    <string name="chatRoomSettingsDialogMsg2">Do you really want to delete this room?</string>
    <string name="chatRoomSettingsDialogMsg3">Do you really want to leave this room?</string>
    <string name="chatRoomSettingsDialogMsg4">You cannot delete a room if you are not the owner</string>
    <string name="chatRoomSettingsDialogMsg5">You cannot update the name of the room if you are not the owner</string>
    <string name="chatRoomSettingsReport">Report room</string>
    <string name="chatRoomSettingsRoomName">Room name</string>
    <string name="chatRoomSettingsGoTo">Go to settings</string>

    <!-- Room Creator -->
    <string name="roomCreatorTitle">Create room</string>
    <string name="roomCreatorSelected">Selected:</string>
    <string name="roomCreatorMessage">Room created!</string>
    <string name="roomCreatorEndToEndEncryption">Use end-to-end encryption</string>
    <string name="roomCreatorMax">Currently we only support maximum of 10 people (without you).</string>
    <string name="roomCreatorEncryptionHelper">With this option every user in this room will have to use an encryption code. Every text message you send to us is encrypted</string>
    <string name="roomCreatorBroadcastHelper">With the option only you or selected people can send messages but everyone can see the messages.</string>

    <!-- RegEx (Errors)-->
    <string name="regExEmpty">Can\'t be empty</string>
    <string name="regExSmaller">Can\'t be smaller than </string>
    <string name="regExBigger">Can\'t be bigger than </string>
    <string name="regExEmail">Not a valid Email</string>
    <string name="regExUsername">We only allow English characters or numbers.</string>
    <string name="regExName">We only allow English and Greek characters, a dot, a space in between</string>
    <string name="regExPassword">The minimum is: 1 Special character, 1 Number and 6 characters</string>
    <string name="regExURL">Not a valid link</string>

    <!-- HelperText -->
    <string name="helperEmail" translatable="false">email@address.com</string>
    <string name="helperUserName" translatable="false">username</string>
    <string name="helperName" translatable="false">John Doe</string>

    <!-- Auth (Errors) -->
    <string name="authEmail">Email Already Exists!</string>
    <string name="authUsername">Username Already Exists!</string>

    <!-- ProfileViewer -->
    <string name="profileViewerPrivateProfile">Private Profile</string>
    <string name="profileViewerOptionBlock">Block</string>
    <string name="profileViewerOptionReport">Report</string>

</resources>
