<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basicBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcomeGuideMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/welcomeAppImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/textBold"
        android:textAppearance="@style/ToolBar.TextAppearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcomeGuideMainText"/>

    <TextView
        android:id="@+id/welcomeMainText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/welcomeTitle"
        android:textColor="@color/textBold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeGuideMainText" />

    <TextView
        android:id="@+id/welcomeHelperText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcomeBody"
        android:textSize="16sp"
        android:textColor="@color/textBold"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/welcomeMainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeMainText"/>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcomeSignUp"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/signUpCreateAcc"
        android:textAllCaps="false"
        app:cornerRadius="12.5dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcomeSignIn"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcomeSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/welcomeHaveAccount"
        android:textColor="@color/textBold"
        android:textAllCaps="false"
        app:cornerRadius="12.5dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
