<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/basicBackground"
    tools:context=".view.util.AccountInteractions.ChangeEmail">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/changeEmailAppImage"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_launcher_background"
        app:shapeAppearance="@style/RectComponent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/changeEmailTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/changeEmailTitle"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/textBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeEmailAppImage"/>

    <TextView
        android:id="@+id/changeEmailSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/changeEmailSubTitle"
        android:textSize="17sp"
        android:textColor="@color/textBold"
        app:layout_constraintStart_toStartOf="@id/changeEmailTitle"
        app:layout_constraintEnd_toEndOf="@id/changeEmailTitle"
        app:layout_constraintTop_toBottomOf="@id/changeEmailTitle"/>

    <TextView
        android:id="@+id/changeEmailCurrent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/helperEmail"
        android:textStyle="bold|italic"
        android:textSize="17sp"
        android:textColor="@color/textBold"
        app:layout_constraintStart_toStartOf="@id/changeEmailSubTitle"
        app:layout_constraintEnd_toEndOf="@id/changeEmailSubTitle"
        app:layout_constraintTop_toBottomOf="@id/changeEmailSubTitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changeEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/generalEmail"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="345"
        app:helperText="@string/helperEmail"
        app:boxCornerRadiusTopStart="12.5dp"
        app:boxCornerRadiusTopEnd="12.5dp"
        app:boxCornerRadiusBottomStart="12.5dp"
        app:boxCornerRadiusBottomEnd="12.5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeEmailCurrent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="345"
            android:inputType="textEmailAddress|textAutoComplete"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeEmailCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generalCancel"
        android:textAllCaps="false"
        app:cornerRadius="12.5dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeEmailNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generalConfirm"
        android:textAllCaps="false"
        app:cornerRadius="12.5dp"
        android:enabled="false"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    
</androidx.constraintlayout.widget.ConstraintLayout>
