<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basicBackground"
    tools:context=".view.activity.SignUp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/signUpAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/signUpToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:navigationContentDescription="@string/signUpGoBack"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:titleTextColor="@color/textBold"
            app:titleTextAppearance="@style/ToolBar.TextAppearance"
            android:background="@color/basicBackground"
            style="@style/ToolBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/signUpHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/signUpCreateAcc"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/textBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpAppBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarThumbVertical="@drawable/scrollbar_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpHelper"
        app:layout_constraintBottom_toTopOf="@id/singUpCreateDivider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/generalEmail"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="345"
                app:helperText="@string/helperEmail"
                app:boxCornerRadiusTopStart="12.5dp"
                app:boxCornerRadiusTopEnd="12.5dp"
                app:boxCornerRadiusBottomStart="12.5dp"
                app:boxCornerRadiusBottomEnd="12.5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="345"
                    android:inputType="textEmailAddress|textAutoComplete"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpUsernameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/generalUsername"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:helperText="@string/helperUserName"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:boxCornerRadiusTopStart="12.5dp"
                app:boxCornerRadiusTopEnd="12.5dp"
                app:boxCornerRadiusBottomStart="12.5dp"
                app:boxCornerRadiusBottomEnd="12.5dp"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUpEmailError">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="15"
                    android:inputType="textPersonName|textAutoComplete"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/generalPassword"
                app:endIconMode="password_toggle"
                app:counterEnabled="true"
                app:counterMaxLength="255"
                app:boxCornerRadiusTopStart="12.5dp"
                app:boxCornerRadiusTopEnd="12.5dp"
                app:boxCornerRadiusBottomStart="12.5dp"
                app:boxCornerRadiusBottomEnd="12.5dp"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUpUsernameError">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="255"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/singUpCreateDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/signUpCreateAccount"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/signUpCreate"
        android:textAllCaps="false"
        app:cornerRadius="12.5dp"
        android:enabled="false"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
