<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/basicBackground"
    tools:context=".view.util.AccountActions.DeleteAccount">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/deleteAccountAppImage"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_launcher_background"
        app:shapeAppearance="@style/RectComponent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteAccountTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/deleteAccountTitle"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/textBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteAccountAppImage" />

    <TextView
        android:id="@+id/deleteAccountParagraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/deleteAccountParagraph"
        android:textSize="17sp"
        android:textColor="@color/textBold"
        app:layout_constraintStart_toStartOf="@id/deleteAccountTitle"
        app:layout_constraintEnd_toEndOf="@id/deleteAccountTitle"
        app:layout_constraintTop_toBottomOf="@id/deleteAccountTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteAccountCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generalCancel"
        android:textAllCaps="false"
        app:cornerRadius="12.5dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteAccountConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:textAllCaps="false"
        app:cornerRadius="12.5dp"
        android:enabled="false"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
